# mjpeg-video-tcp-transmit-experiments

./: CMakeLists.txt  README.md  main.cpp
experimenting/: receiver.py  transmitter.py
src/: camserver.cpp  camserver.h  server.cpp  server.h
